Successful retrieval of company was done will all green status
